# airflow-course

./: MultiNode.excalidraw  SingleNode.excalidraw  docker-compose.yaml  fakeuser.json
config/: airflow.cfg
dags/: branch.py  celery.py  group_info.py  group_simple.py  sql.py  user.py  user_processing.py  x_com.py
my-sdk/: pyproject.toml
my-sdk/my_sdk/: __init__.py
my-sdk/my_sdk/decorators/: sql.py  sql_tutorial_fallido.py
